fix alignments for first 2 pages

--- a/src/shared/css/alignment.css
+++ b/src/shared/css/alignment.css
@@ -6,10 +6,16 @@
 
 }
 
+.maximum-width {
+    width: 100%;
+}
+
+.button-spacing {
+    margin: 10%;
+}
+
 .vertical-center {
     min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
     min-height: 100vh; /* These two lines are counted as one :-)       */
-
- 
     align-items: center;
 }
